gracile-core/tests/fixtures/html/snapshots/r#mod__fixtures__html__const_and_raw.snap
---
source: gracile-core/tests/fixtures/html/mod.rs
expression: output
---
<p>Hello, World!</p>
<pre>
Template syntax: {#if cond} body {/if}
Each loop: {#each items as item} {item} {/each}
</pre>
