gracile-core/tests/fixtures/html/snapshots/r#mod__fixtures__html__control_flow.snap
---
source: gracile-core/tests/fixtures/html/mod.rs
expression: output
---
<span class="grade b">B</span>
