gracile-core/tests/fixtures/html/snapshots/r#mod__fixtures__html__custom_filter.snap
---
source: gracile-core/tests/fixtures/html/mod.rs
expression: output
---
<p>
  Aaaah <strong>ALICE!!!</strong>
</p>
