gracile-core/tests/fixtures/html/snapshots/r#mod__fixtures__html__each_destructure.snap
---
source: gracile-core/tests/fixtures/html/mod.rs
expression: output
---
<table>
  <thead>
    <tr><th>Name</th><th>Price</th><th>Stock</th></tr>
  </thead>
  <tbody>
    <tr>
      <td>Widget</td>
      <td>$9.99</td>
      <td>In stock</td>
    </tr>
    <tr>
      <td>Gadget</td>
      <td>$24.99</td>
      <td>Out of stock</td>
    </tr>
  </tbody>
</table>
