gracile-core/tests/fixtures/html/snapshots/r#mod__fixtures__html__each_empty_renders_else.snap
---
source: gracile-core/tests/fixtures/html/mod.rs
description: "{:else} branch renders when the list is empty"
expression: output
---
<ul>
  <li>No items available.</li>
</ul>
