gracile-core/tests/fixtures/html/snapshots/r#mod__fixtures__html__each_with_index_and_else.snap
---
source: gracile-core/tests/fixtures/html/mod.rs
expression: output
---
<ul>
  <li>0. apple</li>
  <li>1. banana</li>
  <li>2. cherry</li>
</ul>
