gracile-core/tests/fixtures/html/snapshots/r#mod__fixtures__html__escaping.snap
---
source: gracile-core/tests/fixtures/html/mod.rs
expression: output
---
<p class="safe">&lt;script&gt;alert(&#x27;xss&#x27;)&lt;/script&gt;</p>
<div class="raw">null</div>
