gracile-core/tests/fixtures/html/snapshots/r#mod__fixtures__html__expressions.snap
---
source: gracile-core/tests/fixtures/html/mod.rs
expression: output
---
<ul>
  <li>11</li>
  <li>Hello, stranger!</li>
  <li>Jane Doe</li>
  <li>positive</li>
  <li>Has admin role.</li>
  <li>Even age.</li>
  <li>No bio provided.</li>
</ul>
