gracile-core/tests/fixtures/html/snapshots/r#mod__fixtures__html__include_partial.snap
---
source: gracile-core/tests/fixtures/html/mod.rs
expression: output
---
<html>
<head>
  <title>Home</title>
</head>
  <body>
    <h1>Hello, Bob!</h1>
  </body>
</html>
