gracile-core/tests/fixtures/html/snapshots/r#mod__fixtures__html__interpolation.snap
---
source: gracile-core/tests/fixtures/html/mod.rs
expression: output
---
<article>
  <h1>My Article</h1>
  <p>By Alice (alice@example.com)</p>
  <footer>Views: 1234 — Rating: 4.5</footer>
</article>
